# flash

./: .clang-format  .dockerignore  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  Dockerfile.monitor  LICENSE  Makefile  README.md  docker-compose.yml  meson.build  meson_options.txt
.github/workflows/: main.yml
config/: chain-config.json  complex-config.json  config-1.json  config-2.json  config-3.json  config-4.json  config-5.json  config-6.json  config-7.json  config-8.json  config-rr1.json  config-rr2.json  config.json  config1.json  simple-config.json
doc/flash_kernel/: flash_kernel.md  flash_kernel.rst
doc/nf/: config.md
examples/: meson.build
examples/arpresolver/: main.c  meson.build
examples/arpresolver-rs/: Cargo.toml
examples/arpresolver-rs/src/: cli.rs  main.rs  nf.rs
examples/firewall/: config.json  main.c  meson.build
examples/firewall-rs/: Cargo.toml  rules.txt
examples/firewall-rs/src/: cli.rs  main.rs  nf.rs
examples/fwddrop/: main.c  meson.build
examples/helloworld/: main.c  meson.build
examples/helloworld-rs/: Cargo.toml
examples/helloworld-rs/src/: cli.rs  main.rs
examples/ip4ping/: main.c  meson.build
examples/ip4ping-rs/: Cargo.toml
examples/ip4ping-rs/src/: cli.rs  main.rs  nf.rs
examples/l2fwd/: main.c  meson.build
examples/l2fwd-rs/: Cargo.toml
examples/l2fwd-rs/src/: cli.rs  main.rs
examples/maglev/: config.json  hashmap.c  hashmap.h  load_balancer.h  main.c  meson.build  murmurhash.h  read.c  working.c
examples/maglev-rs/: Cargo.toml
examples/maglev-rs/src/: cli.rs  maglev.rs  main.rs  nf.rs
examples/mica/: main.c  meson.build
examples/mica/ported-mica/: alloc.h  alloc_dynamic.c  alloc_dynamic.h  alloc_malloc.c  alloc_malloc.h  alloc_pool.c  alloc_pool.h  basic_types.h  city.c  city.h  common.h  hash.c  hash.h  mehcached.h  shm.c  shm.h  table.c  table.h  util.c  util.h
examples/mtcp/: epserver.c  epserver.conf  epwget.c  epwget.conf  meson.build
examples/mtcp-utils/: meson.build  mtcp-enter.c  mtcp-exit.c
examples/simple-firewall/: config.json  main.c  meson.build
examples/simplefwd/: main.c  meson.build
examples/simplefwd-rs/: Cargo.toml  build.rs
examples/simplefwd-rs/src/: cli.rs  main.rs
examples/txgen/: main.c  meson.build
examples/unit-tests/: backpressure.c  correctness.c  fwddrop.c  fwdrr.c  main.c  meson.build  multi-flow-tx.c  ring-benchmark.c  ring-benchmark.h  ring-benchmark.py  userspace-chain.c
examples/unit-tests/config/: backpressure-complex.json  backpressure-simple.json  userspace-chain.json
lib/: meson.build
lib/flash/: meson.build
lib/flash-rs/: Cargo.toml
lib/flash-rs/src/: client.rs  config.rs  def.rs  error.rs  fd.rs  lib.rs  mmap.rs  ring.rs  socket.rs  stats.rs  uds_conn.rs  umem.rs  util.rs
lib/flash-rs/src/config/: common.rs  config.rs  config_clap.rs  config_noclap.rs  error.rs  mod.rs  poll.rs  socket.rs  xsk.rs
lib/flash-rs/src/fd/: error.rs  fd.rs  mod.rs  socket.rs  xdp.rs
lib/flash-rs/src/mem/: desc.rs  error.rs  mmap.rs  mod.rs  pollout.rs  pool.rs  umem.rs
lib/flash-rs/src/mem/ring/: comp.rs  error.rs  fill.rs  mod.rs  rx.rs  tx.rs
lib/flash-rs/src/socket/: fd.rs  mod.rs  ring.rs  stats.rs  xdp.rs
lib/flash-rs/src/stats/: mod.rs  stats.rs  sub.rs
lib/flash-rs/src/tui/: dashboard.rs  error.rs  layout.rs  layout_str.rs  mod.rs  panel.rs
lib/flash-rs/src/tui/widget/: app.rs  meta.rs  mod.rs  ring.rs  xdp.rs
lib/flash-rs/src/uds/: client.rs  conn.rs  def.rs  error.rs  mod.rs
lib/flash-rs/src/xsk/: desc.rs  error.rs  fd.rs  mod.rs  ring.rs  shared.rs  socket.rs  stats.rs  xdp.rs
lib/flash/cfgparser/: flash_cfgparser.c  flash_cfgparser.h  meson.build
lib/flash/common/: flash_common.c  flash_common.h  meson.build
lib/flash/display/: flash_display.c  flash_display.h  meson.build
lib/flash/log/: log.c  log.h  meson.build
lib/flash/monitor/: flash_cfgparser.c  flash_display.c  flash_monitor.c  flash_monitor.h  meson.build
lib/flash/mtcp/: addr_pool.c  api.c  arp.c  ccp.c  clock.c  config.c  core.c  cpu.c  debug.c  dpdk_module.c  eth_in.c  eth_out.c  eventpoll.c  fhash.c  flash_module.c  icmp.c  io_module.c  ip_in.c  ip_out.c  logger.c  memory_mgt.c  meson.build  netmap_module.c  onvm_module.c  pacing.c  pipe.c  psio_module.c  rss.c  socket.c  tcp_in.c  tcp_out.c  tcp_rb_frag_queue.c  tcp_ring_buffer.c  tcp_sb_queue.c  tcp_send_buffer.c  tcp_stream.c  tcp_stream_queue.c  tcp_util.c  timer.c
lib/flash/mtcp/include/: addr_pool.h  arp.h  ccp.h  clock.h  config.h  cpu.h  debug.h  eth_in.h  eth_out.h  eventpoll.h  fhash.h  icmp.h  io_module.h  ip_in.h  ip_out.h  logger.h  memory_mgt.h  mtcp.h  mtcp_api.h  mtcp_epoll.h  netmap.h  netmap_user.h  pacing.h  pipe.h  ps.h  rss.h  socket.h  stat.h  tcp_in.h  tcp_out.h  tcp_rb_frag_queue.h  tcp_ring_buffer.h  tcp_sb_queue.h  tcp_send_buffer.h  tcp_stream.h  tcp_stream_queue.h  tcp_util.h  timer.h
lib/flash/nf/: flash_helpers.c  flash_nf.c  flash_nf.h  flash_stats.c  flash_txrx.c  flash_txrx_dev.c  meson.build
lib/flash/params/: flash_params.c  flash_params.h  meson.build
lib/flash/pool/: flash_pool.c  flash_pool.h  meson.build
lib/flash/uds/: flash_uds.c  flash_uds.h  meson.build
lib/flash/util/: cpu.c  http_parsing.c  meson.build  netlib.c  tdate_parse.c
lib/flash/util/include/: cpu.h  http_parsing.h  netlib.h  tdate_parse.h
lib/include/: flash_defines.h  flash_list.h  meson.build
lib/utils-rs/: Cargo.toml
monitor/: main.c  meson.build
tools/: ci_build.sh  mklib.sh
usertools/baselines/NetBricks/: Dockerfile
usertools/flash_kernel/: install.sh  uninstall.sh
usertools/netdev/: setup_ixgbe.sh  setup_mlx5.sh
