[workspace]
members = [
  "lib/flash-rs",
  "examples/arpresolver-rs",
  "examples/firewall-rs",
  "examples/helloworld-rs",
  "examples/ip4ping-rs",
  "examples/l2fwd-rs",
  "examples/maglev-rs",
  "examples/simplefwd-rs",
]
resolver = "3"

[profile.release]
codegen-units = 1
lto = true
strip = true
