# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Debojeet Das

option('log_use_color', type: 'boolean', value: true,
       description: 'Enable colored output in the log library')

option('enable_rust', type: 'boolean', value: true,
       description: 'Enable building Rust applications and libraries')

option('enable_mtcp', type: 'boolean', value: true,
       description: 'Enable building mtcp libraries and examples')
