[package]
name = "arpresolver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = { version = "3.5.2", optional = true }
flash = { path = "../../lib/flash-rs", features = ["clap"] }
macaddr = "1.0.1"
thiserror = "2.0.18"
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true }
utils = { path = "../../lib/utils-rs" }

[features]
default = ["dep:ctrlc"]
stats = ["flash/stats", "flash/tui"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "flash/tracing"]

[lints.rust]
unsafe_code = "forbid"
