[package]
name = "maglev"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
core_affinity = "0.8.3"
ctrlc = "3.4.5"
flash = { path = "../../lib/flash-rs", features = ["clap"] }
fnv = "1.0.7"
macaddr = "1.0.1"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
twox-hash = "2.1.0"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber", "flash/tracing"]

[lints.rust]
unsafe_code = "forbid"
