# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2025 Debojeet Das

sources = files('mtcp-enter.c')

executable('mtcp-enter', sources, c_args: cflags, install: true, dependencies: deps)

sources2 = files('mtcp-exit.c')

executable('mtcp-exit', sources2, c_args: cflags, install: true, dependencies: deps)
