[package]
name = "flash"
version = "0.1.0"
edition = "2024"
description = "Flash userspace library for AF_XDP network function chaining"
repository = "https://github.com/rickydebojeet/flash"
license = "Apache-2.0"

[dependencies]
bitflags = "2.9.0"
clap = { version = "4.5.35", features = ["derive"], optional = true }
libc = "0.2.171"
libxdp-sys = "0.2.1"
quanta = "0.12.5"
ringbuffer = { version = "0.15.0", optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }
uds = "0.4.2"

[features]
default = []
clap = ["dep:clap"]
pool = ["dep:ringbuffer"]
stats = []
tracing = ["dep:tracing"]
