[package]
name = "flash"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Flash userspace library for AF_XDP network function chaining"
repository = "https://github.com/networkedsystemsIITB/flash"
license = "Apache-2.0"

[dependencies]
bitflags = "2.9.0"
chrono = { version = "0.4.42", optional = true }
clap = { version = "4.5.35", features = ["derive"], optional = true }
libc = "0.2.171"
libxdp-sys = "0.2.1"
quanta = "0.12.5"
ratatui = { version = "0.29.0", optional = true }
ringbuffer = { version = "0.15.0", optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }
uds = "0.4.2"

[features]
default = []
clap = ["dep:clap"]
pool = ["dep:ringbuffer"]
stats = []
tui = ["stats", "dep:chrono", "dep:ratatui"]
tracing = ["dep:tracing"]
