[package]
name = "flash"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Flash userspace library for AF_XDP network function chaining"
repository = "https://github.com/networkedsystemsIITB/flash"
license = "Apache-2.0"

[dependencies]
bitflags = "2.13.0"
chrono = { version = "0.4.45", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
libc = "0.2.186"
libxdp-sys = { version = "0.2.4", features = ["use_cc_build"] }
quanta = "0.12.6"
ratatui = { version = "0.29.0", optional = true }
ringbuffer = { version = "0.15.0", optional = true }
thiserror = "2.0.18"
tracing = { version = "0.1.44", optional = true }
uds = "0.4.2"

[features]
default = []
clap = ["dep:clap"]
pool = ["dep:ringbuffer"]
stats = []
tracing = ["dep:tracing"]
tui = ["dep:chrono", "dep:ratatui", "stats"]
